append sth to virbd-net-blog

--- a/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
+++ b/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
@@ -176,16 +176,24 @@ tags: 操作系统OS
 
     G：代表网域需要经过Gateway准发
 
-    H：代表该路由为一部主机，而非整个网域
+    H：目标是一个主机IP而不是一个网域
+
+    R：使用动态路由时，恢复路由信息的旗标
+
+    D：以及由服务或转port功能设定为动态路由
+
+    M：路由以及被修改了
+
+    ！：这个路由不会被接受，用来抵挡不安全的网域
 
   - Metric
-
+  
   - Ref
-
+  
   - Use
-
+  
   - Iface
-
+  
     Interface（网络接口），表示要去本机要去这个Destination需要走的网络接口
 
 # Linux连接Internet
@@ -380,16 +388,192 @@ iwlist netcardid scan
 
 利用上述得到的参数，修改配置文件，在`/etc/Wireless`目录下，比较麻烦。
 
-
-
-# Linux网络常用指令
-
-chapter 5
-
 # Linux网络安全
 
-Chapter 7 8 9
+Chapter 8 9
+
+## 主机的基本防护
+
+主机的基本防护包含：**软件自动更新、限制联机端口、启动SELinux**等。
+
+软件更新，可以修复当前版本的一些系统BUG。
+
+### Internet数据包进入主机的过程
+
+![image-20220114155700063](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114155700063.png)
+
+1. 防火墙分析
+
+   Linux 系统有内建的防火墙机制，预设的 Linux 防火墙就有两个机制，这两个机制都是独立存在的：
+
+   - 第一层，封包过滤防火墙：IP Filtering 或 Net Filter 
+
+     简单的说，就是 iptables 这个软件所提供的防火墙功能。主要是分析 TCP/IP 的封包表头 来进行过滤的机制，主要分析的是 OSI 的第二、三、四层，主要控制的 就是 MAC, IP, ICMP, TCP 与 UDP 的埠口与状态 (SYN, ACK...) 等。
+
+   - 第二层防火墙：TCP Wrappers 
+
+     通过 netfilter 之后，网络封包会开始接受 Super daemons 及 TCP_Wrappers 的检验。 即 /etc/hosts.allow 与 /etc/hosts.deny 的配置文件功能。 这个功能也是针对 TCP 的 Header 进行再次的分析，同样你可以设定一些机制来抵制某些 IP 或 Port ，好让来源端的封包被丢弃或通过检验。
+
+2. 服务的限制
+
+   如httpd服务可以在httpd.conf文件来规范某些IP不可以使用。
+
+3. SELinux控制
+
+4. 文件系统的`rwx`权限限制
+
+### 限制联机端口
+
+当启动一个网络服务，这个服务会依据 TCP/IP 的相关通讯协议 启动一个埠口在进行监听， 那就是 TCP/UDP 封包的 port (端口) 了。
+
+网络联机是双向的，服务器端得要启动一个监听的端口， 客户端得要随机启动一个埠口来接收响应的数据才行。
+
+- 服务器端启动的监听端口所对应的服务是固定的：
+  例如 WWW 服务开启在 port 80 ，FTP 服务开启在 port 21，email 传送开启在 port 25 等等，都是通讯协议上面的规范！
+  
+- 客户端启动程序时，随机启动一个大于 1024 以上的端口：
+  客户端启动的 port 是随机产生的，主要是开启在大于 1024 以上的端口。这个 port 也是由某些软件所产生的， 例如浏览器、Filezilla 这个 FTP 客户端程 序等等。
+  
+- 一部服务器可以同时提供多种服务：
+  所谓的『监听』是某个服务程序会一直常驻在内存当中，所以该程序启动的 port 就会一直存在。 只要服务器软件激活的端口不同，那就不会造成冲突。当客户端连接到此服务器时，透过不同的埠口，就可以取得不同的服务数据啰。 所以，一部主机上面当然可以同时启动很多不同的服务啊！
+
+- 共 65536 个 port： 
+
+  TCP/UDP 表头数据中 port 占用 16 个位，因此一般主机会有 65536 个 port，而这些 port 又分成两个部分，以 port 1024 作区隔：
+
+  - 只有 root 才能启动的保留的 port： 在小于 1024 的埠口，都是需要以 root 的身份才能启动的，这些 port 主要是用于一些常见的通讯服务，在 Linux 系统下，常见的协议与 port 的对应是记录在 /etc/services 里面的。
+  - 大于 1024 用于 client 端的 port： 在大于 1024 以上的 port 主要是作为 client 端的软件激活的 port 。
+  
+- 是否需要三向交握：
+    建立可靠的联机服务需要使用到 TCP 协议，也就需要所谓的三向交握了，如果 是非面向连接的服务，例如 DNS 与视讯系统， 那只要使用 UDP 协议即可。
+    
+- 通讯协议可以启用在非常规的 port
+    
+- 所谓的 port 的安全性
+    
+    **没有必要的服务就将他关闭！ 尤其某些网络服务还会启动一些 port ！另外，那些已启动的软件也需要持续的保持更新！**
+
+## 路由
+
+
 
 # Linux远程联机服务
 
 chapter 11
+
+# Linux网络常用指令总结
+
+## 网络参数设定
+
+### 设定与开闭IP参数
+
+- `ifconfig`
+
+  手动的启动、观察与修改网络接口的相关参数，IP参数以及MTU等
+
+  ![image-20220114145519188](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114145519188.png)
+
+- `ifup`和`ifdown`
+
+  手动修改完`/etc/sysconfig/network-scripts`目录下的文件后，使用`ifup`使得配置生效。
+
+  ![image-20220114145836004](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114145836004.png)
+
+### 路由修改route
+
+![image-20220114150140306](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114150140306.png)![image-20220114150151057](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114150151057.png)
+
+### 网络参数综合指令ip
+
+![image-20220114150827884](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114150827884.png)![image-20220114150834996](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114150834996.png)
+
+### 无线网络
+
+`iwlist`和`iwconfig`
+
+### 设置DCHP方式
+
+```shell
+dhclient netcardid
+```
+
+## 网络侦错与观察指令
+
+### 两步主机沟通ping
+
+![image-20220114151217677](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114151217677.png)
+
+### 两主机间各节点分析traceroute
+
+![image-20220114151423163](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114151423163.png)![image-20220114151431855](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114151431855.png)
+
+### 查看本机的网络联机与后门netstat
+
+![image-20220114151606099](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114151606099.png)
+
+### 侦测主机名与IP对应
+
+除了`dig`还有`host`和`nslookup`
+
+- `host`
+
+  ![image-20220114152355932](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114152355932.png)‘
+
+- `nslookup`
+
+  ![image-20220114152452562](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114152452562.png)
+
+## 远程联机指令与实时通讯软件
+
+### 终端机联机服务器
+
+![image-20220114152628945](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114152628945.png)
+
+### FTP联机
+
+- `ftp`
+
+  ```shell
+  ftp [host|IP] [port]
+  ```
+
+- `Iftp`
+
+  ![image-20220114152835510](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114152835510.png)![image-20220114152845131](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114152845131.png)
+
+## 文字接口网页浏览
+
+### 文字浏览器links
+
+进行网页的浏览
+
+![image-20220114153920989](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114153920989.png)
+
+### 文字接口下载器wget
+
+网页数据的取得
+
+![image-20220114154325906](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114154325906.png)
+
+## 数据包获取
+
+### 文字接口数据包获取器tcpdump
+
+![image-20220114154428798](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114154428798.png)
+
+### 图形接口数据包获取器wireshark
+
+安装
+
+```shell
+yum install wireshark wireshark-gnome
+```
+
+必须要在X Window底下运行。
+
+### 任意端口的数据包监听和连接
+
+​	可以监听某些服务的port，也可以和其他端口连接（同步显示stdout等）
+
+![image-20220114155103815](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220114155103815.png)
+
