--- a/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
+++ b/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
@@ -448,14 +448,76 @@ Chapter 8 9
     建立可靠的联机服务需要使用到 TCP 协议，也就需要所谓的三向交握了，如果 是非面向连接的服务，例如 DNS 与视讯系统， 那只要使用 UDP 协议即可。
     
 - 通讯协议可以启用在非常规的 port
-    
+  
 - 所谓的 port 的安全性
-    
+  
     **没有必要的服务就将他关闭！ 尤其某些网络服务还会启动一些 port ！另外，那些已启动的软件也需要持续的保持更新！**
 
 ## 路由
 
+路由最大的功能就是在帮我们规划网络封包的传递方式与方向。可以使用 route 这个指令来查阅与设定。
 
+### 路由表产生的类型
+
+在 Linux 系统下的路由表是由小网域排列到大网域
+
+路由表的设计主要有以下三种：
+
+- 依据网络接口产生的 IP 而存在的路由:
+
+  主机上面有几个网络接口的存在时，该网络接口就会存在几个路由
+
+  > 如192.168.1.0/24的路由对应本机192.168.1.100接口；如果本机还有192.168.2.100时，则路由表就相应存在192.168.2.0/24的路由规则
+
+- 手动或预设路由(default route)
+
+  使用 route 这个指令手动的给予额外的路由设定，例如那个预设路由 (0.0.0.0/0) 就是额外的路由。
+
+  使用 route 这个指令时，最重要的一个概念是: 『你所规划的路由必须要是你的装置 (如 eth0) 或 IP 可以直接沟通 (broadcast) 的情况』才行
+
+- 动态路由
+
+  透过路由器与路由器之间的协商以达成动态路由的环境
+
+  需要额外的软件支持，如zebra或Quagga等。
+
+### 路由器
+
+#### 路由器的功能
+
+​	主机想要将数据传送到不同的网域时得透过路由器的帮忙，即路由器可以实现『转递网络封包』。
+
+​	路由器会分析来源端封包的 IP 表头， 在表头内找出要送达的目标 IP 后，透过路由器本身的路由表 (routing table) 来将这个封包向下一个目标 (next hop) 传送。
+
+​	一般来说，路由器会有两个网络接口，透过路由器本身的 IP 转递功能让两 个网域可以互相沟通网络封包。
+
+​	实现路由的2种方法：
+
+- 硬件功能
+
+  例如 Cisco, TP-Link, D-Link (注 2) 等公司都有生产硬件路 由器， 这些路由器内有嵌入式的操作系统，可以负责不同网域间的封包转译与转递等功能
+
+- 软件功能
+
+  使用Linux作为路由服务器，例如 Linux 这个操作系统的核心就有提供封包转递的能力。
+
+  在`/etc/sysctl.conf`文件中，设置`net.ipv4.ip_forward=1`。然后使用`sysctl -p`命令，是的配置立即生效。
+
+#### Linux路由器的分类
+
+- 静态路由
+
+  直接以类似 route 这个指令来直接设定路由表到核心功能当中， 设定值只要与网域环境相符即可。 不过，当你的网域有变化时，路由器就得要重新设定;
+
+- 动态路由
+
+  透过类似 Quagga 或 zebra 软件的功能，这些软件可以安装在 Linux 路由器上， 而这些软件可以动态的侦测网域的变化，并直接修改 Linux 核心的路由表信息， 你无须手动以 route 来修改你的路由表信息
+
+#### NAT
+
+NAT（Network Address Translation, 网络地址转换）本身就是一个路由器，只是比路由器多了“IP转换功能”。
+
+NAT透过修改封包的 IP 表头数据之来源或目标 IP ， 让来自私有 IP 的封包可以转成 NAT 服务器的公共 IP ，就可以连上Internet。
 
 # Linux远程联机服务
 
