finish virbd-net-blog

--- a/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
+++ b/_posts/2022-01-12-《鸟哥的LINUX私房菜_服务器篇》笔记.md
@@ -5,6 +5,10 @@ tags: 操作系统OS
 
 # 《鸟哥的LINUX私房菜_服务器篇》笔记
 
+这本书很长很长，这里暂时只记录和整理了我目前常用和常见的。
+
+以后用到其他模块再来翻阅和做笔记，比如邮件服务器等等。
+
 # 基础网络概念
 
 ## 计算机联网结构
@@ -198,8 +202,6 @@ tags: 操作系统OS
 
 # Linux连接Internet
 
-chapter 6
-
 ## 局域网常见布线规划
 
 局域网（Local Area Network， LAN)的Linux服务器的布线方式有多种，这些方式有下面几个前提条件：
@@ -390,8 +392,6 @@ iwlist netcardid scan
 
 # Linux网络安全
 
-Chapter 8 9
-
 ## 主机的基本防护
 
 主机的基本防护包含：**软件自动更新、限制联机端口、启动SELinux**等。
@@ -483,7 +483,7 @@ Chapter 8 9
 
 ### 路由器
 
-#### 路由器的功能
+#### 路由器的功能和实现
 
 ​	主机想要将数据传送到不同的网域时得透过路由器的帮忙，即路由器可以实现『转递网络封包』。
 
@@ -495,7 +495,7 @@ Chapter 8 9
 
 - 硬件功能
 
-  例如 Cisco, TP-Link, D-Link (注 2) 等公司都有生产硬件路 由器， 这些路由器内有嵌入式的操作系统，可以负责不同网域间的封包转译与转递等功能
+  例如 Cisco, TP-Link, D-Link (注 2) 等公司都有生产硬件路由器， 这些路由器内有嵌入式的操作系统，可以负责不同网域间的封包转译与转递等功能
 
 - 软件功能
 
@@ -519,9 +519,258 @@ NAT（Network Address Translation, 网络地址转换）本身就是一个路由
 
 NAT透过修改封包的 IP 表头数据之来源或目标 IP ， 让来自私有 IP 的封包可以转成 NAT 服务器的公共 IP ，就可以连上Internet。
 
+## 防火墙
+
+### 作用
+
+​	比如，你可以限制文件传输服务 (FTP) 只在子域内的主机才能够使用，而不对整个 Internet 开放；你可以限制整部 Linux 主机仅可以接受客户端 的 WWW 要求，其他的服务都关闭；你还可以限制整部主机仅能主动对外联机。反过来说，若有客户端对我们主机发送主动联机的封包状态 (TCP 封包的 SYN flag) 就予以抵挡等等
+
+​	**可以假设在路由器上面保护路由器后的整个内网。**
+
+总的来说：
+
+- 切割被信任(如子域)与不被信任(如 Internet)的网段； 
+- 划分出可提供 Internet 的服务与必须受保护的服务；
+- 分析出可接受与不可接受的封包状态；
+
+### Linux防火墙的类别
+
+1. Netfilter 封包过滤机制
+
+   分析进入主机的网络封包，将封包的表头数据捉出来进 行分析，以决定该联机为放行或抵挡的机制。 由于这种方式可以直接分析封包表头数据，所以包括硬件地址(MAC), 软件地址 (IP), TCP, UDP, ICMP 等封包 的信息都可以进行过滤分析的功能，因此用途非常的广泛。(其实主要分析的是
+   OSI 七层协议的 2, 3, 4 层)
+
+   Linux上Netfilter 提供了**iptables**这个软件来作为防火墙封包过滤的指令。
+
+2. TCP Wrappers (程序控管)
+
+   分析谁对某程序进行存取，然后透过规则去分析该服务器程序谁能够联机、谁不能联机。 由于主要是透过分析服务器程序来控管，因此与启动的端口无关，只与程序的名称有关。
+
+3. Proxy (代理服务器) 
+
+   其实代理服务器是一种网络服务，它可以『代理』用户的需求，而代为前往服务器取得相关的资料。
+
+   ![image-20220117141613116](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117141613116.png)
+
+   - client 会向 proxy server 要求数据，请 proxy 帮忙处理； 
+   - proxy 可以分析使用者的 IP 来源是否合法？使用者想要去的服务器是否合法？如果这个 client 的要求都合法的话，那么 proxy 就会主动的帮忙 client 前往服务器取得资料；服务器回传的数据是传给 proxy server 的，所以服务器上面看到的是 proxy server 的 IP
+   - 最后 proxy 将 服务器回传的数据送给 client。
+
+### Netfilter之iptables
+
+它的主要工作是：
+
+- 拒绝让 Internet 的封包进入主机的某些端口口 
+
+- 拒绝让某些来源 IP 的封包进入 
+
+- 拒绝让带有某些特殊旗标 (flag) 的封包进入
+
+  最常拒绝的就是带有 SYN 的主动联机的旗标了！只要一经发现，就可以将该封包丢弃
+
+- 分析硬件地址 (MAC) 来决定联机与否
+
+Linux主要是iptables这个防火墙机制。有个具体的例子，用到的时候再翻看**9.4小节**。
+
+#### 防火墙规则的顺序
+
+​	如果这个封包并不符合 Rule 1 的比对，那就会进入 Rule 2 的比对了！如此一 个一个规则去进行比对就是了。 **如果所有的规则都不符合，此时就会透过预设动作 (封包政策, Policy) 来决定这个封包的去向。**
+
+![image-20220117143154340](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117143154340.png)
+
+#### iptables的表格与链
+
+​	防火墙软件里面有多个表格 (table) ，每个表格都定义出自己的默认政 策与规则， 且每个表格的用途都不相同。
+
+![image-20220117143303067](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117143303067.png)
+
+Linux 的 iptables 至少就有三个表格，包括管理本机进出的 filter 、管理后端主机 (防火墙内部的其他计算机) 的 nat 、管理特殊旗标使用的 mangle (较少使用) 
+
+- filter (过滤器)：主要跟进入 Linux 本机的封包有关，这个是预设的 table 
+  - INPUT：主要与想要进入我们 Linux 本机的封包有关； 
+  - OUTPUT：主要与我们 Linux 本机所要送出的封包有关；
+  - FORWARD：这个与 Linux 本机比较没有关系， 他可以『转递封包』到后端的计算机中，与下列 nat table 相关性较高。
+- nat (地址转换)：是 Network Address Translation 的缩写， 这个表格主 要在进行来源与目的之 IP 或 port 的转换，与 Linux 本机较无关，主要与 Linux 主机后的局域网络内计算机较有相关。
+  - PREROUTING：在进行路由判断之前所要进行的规则(DNAT/REDIRECT)
+  - POSTROUTING：在进行路由判断之后所要进行的规则 (SNAT/MASQUERADE)
+  - OUTPUT：与发送出去的封包有关
+- mangle (破坏者)：这个表格主要是与特殊的封包的路由旗标有关， 早期仅有 PREROUTING 及 OUTPUT 链，不过从 kernel 2.4.18 之后加入了 INPUT 及 FORWARD 链。
+
+iptables内建表格与链的相关性（不含mangle)：
+
+![image-20220117143800107](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117143800107.png)
+
+#### iptables设定
+
+- iptables查看
+
+  ![image-20220117144001301](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117144001301.png)
+
+  每条记录的格式如下：
+
+  ![image-20220117144101510](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117144101510.png)
+
+  - target：代表进行的动作， ACCEPT 是放行，而 REJECT 则是拒绝，此外， 尚有 DROP (丢弃) 的项目！
+  - prot：代表使用的封包协议，主要有 tcp, udp 及 icmp 三种封包格式；
+  - opt：额外的选项说明
+  - source ：代表此规则是针对哪个『来源 IP』进行限制
+  - destination ：代表此规则是针对哪个『目标 IP』进行限制
+
+  另外，`iptables-save` 会列出完整的防火墙规则，只但是并没有规格化输出
+
+  ![image-20220117144341435](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117144341435.png)
+
+- 清除规则
+
+  ![image-20220117144510107](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117144510107.png)![image-20220117144519802](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117144519802.png)
+
+- 定义预设规则policy
+
+  ![image-20220117145604909](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117145604909.png)
+
+- 定义一般规则
+
+  ![image-20220117145856124](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117145856124.png)![image-20220117145902235](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117145902235.png)
+
+  也可以通过端口来设定
+
+  ![image-20220117145951396](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117145951396.png)![image-20220117145959547](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117145959547.png)
+
+- 设定iptables的外挂模块
+
+  针对特殊**mac**和**已经响应的封包**的规则设置
+
+  ![image-20220117150138320](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117150138320.png)
+
+- 设定是否响应ping（ICMP数据包）
+
+  ![image-20220117150409962](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117150409962.png)![image-20220117150417683](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117150417683.png)
+
+  
+
+### TCP Wrappers
+
+TCP wrappers 就是透过 /etc/hosts.allow, /etc/hosts.deny 这两个文件来管理的一个类似防火墙的机制。
+
+文件的配置格式：
+
+```
+<service(program_name)> : <IP, domain, hostname> 
+<服务 (亦即程序名称)> : <IP 或领域 或主机名>
+```
+
 # Linux远程联机服务
 
-chapter 11
+## 常见的方式
+
+基本上有文字接口与图形接口两种：
+
+- 文字接口明码： telnet, rsh 等为主，目前非常少用；
+- 文字接口密码： ssh 为主，已经取代上述的 telnet, rsh 等明码方式；
+- 图形接口： Xdmcp, VNC, RDP 等较为常见
+
+## SSH
+
+​	SSH 是 Secure Shell protocol 的简写 (安全的壳程序协议)，它可以透过数据封包加密技术，将等待传输的封包加密后再传输到网络上， 因此，数据讯息当然就比较安全。这个 SSH 可以用来取代较不安全的 finger, R Shell (rcp, rlogin, rsh等), talk 及 telnet 等联机模式。
+
+​	这个 SSH 协议，在预设的状态中，本身就提供两个服务器功能：
+
+- 类似 telnet 的远程联机使用 shell 的服务器，亦即是俗称的 ssh 
+
+- 类似 FTP 服务的 sftp-server ！提供更安全的 FTP 服务
+
+### 联机加密
+
+​	目前常见的网络封包加密技术通常是所谓的『非对称密钥系统』来处理的。 主要是透过两把不一样的公钥与私钥 (Public and Private Key) 来进行加密与解密的过程。由于这两把钥匙是提供加解密的功用， 所以在同一个 方向的联机中，这两把钥匙当然是需要成对的！它的功用分别如下：
+
+- 公钥 (public key)：提供给远程主机进行数据加密的行为，也就是说，大家都能取得你的公钥来将数据加密的意思；
+- 私钥 (private key)：远程主机使用你的公钥加密的数据，在本地端就能够使用私钥来进行解密。由于私钥是这么的重要， 因此私钥是不能够外流的！只 能保护在自己的主机上。
+
+![](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117152713802.png)
+
+​	目前 SSH 的协议版本有两种，分别是 version 1 与 version 2 ，其中 V2 由于加上 了联机检测的机制， 可以避免联机期间被插入恶意的攻击码，因此比 V1 还要更加的安全。所以啰，请尽量使用 V2 版本即可，不要使用 V1 ！
+
+ssh联机的步骤如下：
+
+![image-20220117152937190](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117152937190.png)
+
+1. 服务器建立公钥档： 每一次启动 sshd 服务时，该服务会主动去找` /etc/ssh/ssh_host* `的档案，若系统刚刚安装完成时，由于没有这些公钥档案， 因此 sshd 会主动去计算出这些需要的公钥档案，同时也会计算出服务器自己需要的私钥档；
+
+2. 客户端主动联机要求
+
+3. 服务器传送公钥档给客户端： 接收到客户端的要求后，服务器便将第一个步骤取得的公钥档案传送给客户端使用 (此时应是明码传送，反正公钥本来就是给大家使用的！)；
+
+4. 客户端记录/比对服务器的公钥数据及随机计算自己的公私钥：
+
+   - 若客户端第 一次连接到此服务器，则会将服务器的公钥数据记录到客户端的用户家目录内的 `~/.ssh/known_hosts`。
+   - 若是已经记录过该服务器的公钥数据，则客户端会去比 对此次接收到的与之前的记录是否有差异。
+
+   若接受此公钥数据， 则开始计算客户端自己的公私钥数据；
+
+5. 回传客户端的公钥数据到服务器端： 用户将自己的公钥传送给服务器。
+
+   - 此时服务器：『具有服务器的私钥与客户端的公钥』
+   - 而客户端则是： 『具有服务器的公钥以及客户端自己的私钥
+
+6. 开始双向加解密：
+
+   - 服务器到客户端：服务器传送数据时，拿用户的公钥 加密后送出。客户端接收后，用自己的私钥解密；
+   - 客户端到服务器：客户端传送数据时，拿服务器的公钥加密后送出。服务器接收后，用服务器的私钥解密
+
+### 启动ssh服务
+
+​	Linux 系统当中，默认就已经含有 SSH 的所有需要的软件 了！这包含了可以产生密码等协议的 OpenSSL 软件与 OpenSSH 软件。
+
+```shell
+/etc/init.d/sshd [restart|start|stop]
+```
+
+启动后，同时在22端口提供了FTP服务！
+
+### client使用ssh
+
+- 登入远程主机
+
+  ![image-20220117153629031](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117153629031.png)![image-20220117153642809](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117153642809.png)
+
+- 文件传输sftp
+
+  ```shell
+  sftp [账号@]IP
+  ```
+
+- 档案异地直接复制scp
+
+  ![image-20220117154036350](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117154036350.png)
+
+### ssh配置
+
+都在`/etc/ssh/sshd_config`里面
+
+## VNC
+
+​	VNC server 会在服务器端启动一个监听用户要求的端口，一般端口号码在 5901 ~ 5910 之间。当客户端启动 X server 联机到 5901 之后， VNC server 再将一 堆预先设定好的 X client 透过这个联机传递到客户端上，最终就能够在客户端显示服务器的图形接口了。
+
+- 设置和连接VNC
+
+  ![image-20220117154702762](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117154702762.png)![image-20220117154733884](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117154733884.png)
+
+- 修改VNC密码
+
+  ![image-20220117154853886](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220117154853886.png)
+
+- 客户端软件
+
+  Linux下是vncviewer.
+
+  ```shell
+  # 安装
+  yum install tigervnc
+  # 连接
+  vncviewer ip:号码
+  ```
+
+  
 
 # Linux网络常用指令总结
 
