--- a/_posts/2020-12-11-设计模式.md
+++ b/_posts/2020-12-11-设计模式.md
@@ -125,6 +125,18 @@ tags: 编程艺术
 
 （7）合成复用原则：要尽量先使用组合或者聚合等关联关系来实现，其次才考虑使用继承关系来实现。
 
+可以用**SOLID**来总结：
+
+### SOLID
+
+这是一个缩写，指的是：
+
+- S：单一功能原则 (The Single Responsibility Principle)
+- O：开闭原则 (The Open/Closed Principle)
+- L：里氏替换原则 (The Liskov Substitution Principle)
+- I：接口隔离原则 (The Interface Segregation Principle)
+- D：依赖反转原则 (The Dependency Inversion Principle)
+
 # 单例模式
 
 ## 定义
