review java blog, and fix image path

--- a/_posts/2020-10-26-Java基础+集合.md
+++ b/_posts/2020-10-26-Java基础+集合.md
@@ -1,5 +1,5 @@
 ---
-title: Java基础+集合+多线程+JVM（一）
+title: Java基础+集合
 tags: Java
 ---
 
@@ -8,14 +8,11 @@ tags: Java
 > 目录  
 >   **1 Java基础  
 >   2 Java集合**  
->   3 Java多线程  
->   4 JVM  
->   5 常见问题汇总  
->
-> 参考资料  
+>   
+>   参考资料  
 >   ·《Java编程思想》  
->   ·《Java Web 技术内幕》  
->   ·《Java 并发编程实战》     
+>·《Java Web 技术内幕》  
+> ·《Java 并发编程实战》     
 
 # Java基础
 
@@ -72,7 +69,7 @@ true  false  true  true  true  false   true
 
 （3）8中基本类型的字节大小。
 
-![img](/../assets/Java/1240-20210630144951587.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951587.png)
 
 ### 不需要手动销毁对象
 
@@ -88,7 +85,7 @@ true  false  true  true  true  false   true
 
 ​    · 无“向前引用”问题
 
-​    · 通配符 *，import java.lang.*
+​    · 通配符 `*`，`import java.lang.*`
 
 ​    · **static 修饰时，属于类属性**，与实例无关。
 
@@ -104,7 +101,7 @@ true  false  true  true  true  false   true
 
   - Mark Word
 
-    <img src="/../assets/Java/image-20210630145316284.png" alt="image-20210630145316284" style="zoom:30%;" />
+    <img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20210630145316284.png" alt="image-20210630145316284"/>
 
   - 指向类的指针
 
@@ -294,7 +291,7 @@ true  false  true  true  true  false   true
 
   Object类的方法：
 
-<img src="/../assets/Java/1240-20210630144950882.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144950882.png" alt="img"/>
 
   · 关于clone方法：[Java 浅拷贝和深拷贝 - 简书](https://www.jianshu.com/p/94dbef2de298)、[java中clone方法的理解（深拷贝、浅拷贝）_xinghuo0007的博客-CSDN博客](https://blog.csdn.net/xinghuo0007/article/details/78896726)
 
@@ -429,40 +426,41 @@ public class Teacher extends Employee {
 
 （1）基本异常Exception
 
-​    · new 异常对象
+- new 异常对象
 
-​    · 异常参数：
-
-​        · 默认构造器
-
-​        · 字符串
+- 异常参数：
+  - 默认构造器
+  - 字符串
 
 （2）捕获异常
 
-​    · try
+- try....catch语句
 
-​    · catch
+  异常处理的结果有终止模型和恢复模型两种。**Java支持终止模型**，认为错误非常关键，以至于程序无法返回到异常发生的地方继续执行，一旦异常被抛出，就表明错误已无法挽回，也不能回来继续执行。
 
-​      异常处理的结果有终止模型和恢复模型两种。**Java支持终止模型**，认为错误非常关键，以至于程序无法返回到异常发生的地方继续执行，一旦异常被抛出，就表明错误已无法挽回，也不能回来继续执行。
+- finally
+  - 作用：把内存之外的资源恢复到初始状态，如已经打开的文件或者网络等。
+  - 含有return时，覆盖其他return。
 
-​    · finally
+（3）自定义异常：extends Exception
 
-​        · 作用：把内存之外的资源恢复到初始状态，如已经打开的文件或者网络等。
-​        · 含有return时，覆盖其他return。
+（4）抛出异常
 
-（3）自定义异常：extends Exception 异常基类
+```java
+throw new XXXException("....");
+```
 
-（4）异常说明 throws
+（5）异常说明 throws
 
-（5）发送异常时的清理：在创建需要清理的对象之后，立即进入try-catch-fianlly（嵌套）
+（6）发现异常时的清理：在创建需要清理的对象之后，立即进入try-catch-fianlly（嵌套）
 
-（6）java.lang.Throwable
+（7）java.lang.Throwable
 
-<img src="/../assets/Java/1240-20210630144951512.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951512.png" />
 
-​    · Error（错误）：是程序无法处理的错误，表示运行应用程序中较严重问题。**编译时和系统错误**。
+- Error（错误）：是程序无法处理的错误，表示运行应用程序中较严重问题。**编译时和系统错误**。
 
-​    · Exception（异常）：是程序本身可以处理的异常。可以被抛出的异常。
+- Exception（异常）：是程序本身可以处理的异常。可以被抛出的异常。
 
 ## 字符串
 
@@ -470,7 +468,55 @@ public class Teacher extends Employee {
 
 - 定义：private final byte/char value[] （byte定义是JDK1.9出现的）
 
-- 字符串与常量池的关系：[Java提高篇之常量池_#include-CSDN博客](https://blog.csdn.net/vegetable_bird_001/article/details/51278339)
+- [字符串常量与常量池的关系](https://blog.csdn.net/vegetable_bird_001/article/details/51278339)
+
+  - 常量
+
+    用final修饰的成员变量表示常量，值一旦给定就无法改变！final修饰的变量有三种：静态变量、实例变量和局部变量，分别表示三种类型的常量。
+
+  - 方法区的常量池
+
+    <img src="E:\我的\GithubBlog\Jason-QianHao.github.io\assets\Java\1240-20210630155739956.png" alt="img" />
+
+    <img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630155739975.png" alt="img" style="zoom:80%;" />
+
+    运行时常量池相对于CLass文件常量池的另外一个重要特征是具备动态性，Java语言并不要求常量一定只有编译期才能产生，也就是并非预置入CLass文件中常量池的内容才能进入方法区运行时常量池，运行期间也可能将新的常量放入池中，这种特性被开发人员利用比较多的就是String类的intern()方法。
+
+  - 常量池的好处
+    常量池是为了避免频繁的创建和销毁对象而影响系统性能，其实现了对象的共享。
+    例如字符串常量池，在编译阶段就把所有的字符串文字放到一个常量池中。
+    （1）节省内存空间：常量池中所有相同的字符串常量被合并，只占用一个空间。
+    （2）节省运行时间：比较字符串时，==比equals()快。对于两个引用变量，只用==判断引用是否相等，也就可以判断实际值是否相等。
+
+  - String类型的常量池
+
+    （1）只有使用引号包含文本的方式创建的String对象之间使用“+”连接产生的新对象才会被加入字符串池中。
+
+    （2）对于所有包含new方式新建对象（包括null）的“+”连接表达式，它所产生的新对象都不会被加入字符串池中。
+
+    *可以粗略认为：字符串常量池存放的是对象引用，不是对象。在Java中，对象都创建在堆内存中（待验证）*
+
+  - String的intern()方法
+
+    查找在常量池中是否存在一份equal相等的字符串,如果有则返回该字符串的引用,如果没有则添加自己的字符串进入常量池。
+
+    ```java
+    public static void main(String[] args) {    
+                String str1 = "123";
+                String str2 = "123";
+    
+                String a = new String("123");
+                String b = new String("123");;
+    
+                System.out.println(str1 == str2);//true
+                System.out.println(a == b);//false
+    
+    
+                System.out.println(str1 == b);//false
+                String bb=b.intern();
+                System.out.println((str1== bb));//true
+    }
+    ```
 
 ### “+”“+=”的重载
 
@@ -651,21 +697,21 @@ public class Teacher extends Employee {
 
 （2）访问文件方式
 
-  · 标准访问文件方式：先查缓存，再查磁盘。write()时，内核缓存同步sync时间由操作系统决定。
+- 标准访问文件方式：先查缓存，再查磁盘。write()时，内核缓存同步sync时间由操作系统决定。
 
-<img src="/../assets/Java/1240-20210630144952261.jpeg" alt="img" style="zoom:40%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144952261.jpeg" alt="img" style="zoom:40%;" />
 
-  · 直接IO： 不经过内核空间
+- 直接IO： 不经过内核空间
 
-<img src="/../assets/Java/1240-20210630144952818.jpeg" alt="img" style="zoom:40%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144952818.jpeg" alt="img" style="zoom:40%;" />
 
-  · 同步访问文件：数据写到磁盘才返回成功标志给应用程序。
+- 同步访问文件：数据写到磁盘才返回成功标志给应用程序。
 
-<img src="/../assets/Java/1240-20210630144951310.jpeg" alt="img" style="zoom:40%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951310.jpeg" alt="img" style="zoom:40%;" />
 
-  · 异步访问文件：不阻塞等待
+- 异步访问文件：不阻塞等待
 
-<img src="/../assets/Java/1240-20210630144951439.jpeg" alt="img" style="zoom:40%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951439.jpeg" alt="img" style="zoom:40%;" />
 
 ### Java序列化技术
 
@@ -691,9 +737,9 @@ public class Teacher extends Employee {
 - Java NIO: **Selectors**（选择器）
       Java NIO引入了选择器的概念，选择器用于监听多个通道的事件（比如：连接打开，数据到达）。因此，**单个的线程可以监听多个数据通道**。
 
-<img src="/../assets/Java/1240-20210630144951737.png" alt="img" style="zoom:67%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951737.png" alt="img"/>
 
-<img src="/../assets/Java/1240-20210630144951769.png" alt="img" style="zoom:67%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951769.png" alt="img"/>
 
 #### **Buffers缓冲区**
 
@@ -701,19 +747,19 @@ public class Teacher extends Employee {
 
 　　Buffer就像一个数组，可以保存多个相同类型的数据。根据类型不同（**boolean除外**），有以下Buffer常用子类：
 
-  ·ByteBuffer
+- ByteBuffer
 
-  ·CharBuffer
+- CharBuffer
 
-  ·ShortBuffer
+- ShortBuffer
 
-  ·IntBuffer
+- IntBuffer
 
-  ·LongBuffer
+- LongBuffer
 
-  ·FloatBuffer
+- FloatBuffer
 
-  ·DoubleBuffer
+- DoubleBuffer
 
 （2）属性
 
@@ -729,7 +775,7 @@ public class Teacher extends Employee {
 
   · **非直接缓冲区**：通过allocate() 方法分配缓冲区，将缓冲区建立在 JVM 的内存中。数据存储传输需要先复制到内存地址空间，再到磁盘。
 
-<img src="/../assets/Java/1240-20210630144951861.png" alt="img" style="zoom:67%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951861.png" alt="img"/>
 
   · **直接缓冲区**：
 
@@ -737,7 +783,7 @@ public class Teacher extends Employee {
 
 ​    · 也可以通过FileChannel 的 map() 方法 将文件区域直接映射到内存中来创建。
 
-<img src="/../assets/Java/1240-20210630144952413.png" alt="img" style="zoom:67%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144952413.png" alt="img"/>
 
 #### Channels通道
 
@@ -761,7 +807,7 @@ public class Teacher extends Employee {
 
 ​      gathering Writes：将多个缓冲区的数据聚集到通道中
 
-<img src="/../assets/Java/1240-20210630144951884.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951884.png" alt="img"/>
 
 #### 阻塞与非阻塞
 
@@ -779,7 +825,7 @@ public class Teacher extends Employee {
 
   伪异步：使用线程池管理
 
-![img](/../assets/Java/1240-20210630144951795.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951795.png)
 
 #### Selector选择器
 
@@ -799,11 +845,11 @@ public class Teacher extends Employee {
 
 ​    int interestSet = SelectionKey.OP_READ | SelectionKey.OP_WRITE;
 
-![img](/../assets/Java/1240-20210630144951883.png)
+![img](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951883.png)
 
 #### NIO的Socket请求
 
-<img src="/../assets/Java/1240-20210630144952138.jpeg" alt="img" style="zoom:40%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144952138.jpeg" alt="img"/>
 
   分为两个线程共工作，一个监听客户端连接，一个用于处理数据交互。
 
@@ -827,13 +873,41 @@ public class Teacher extends Employee {
 
 （5）避免字段持久化到数据库方法
 
-​    · static [java序列化之-static|transient 修饰的字段能否被序列化？_CD-CSDN博客](https://blog.csdn.net/superzyl/article/details/105406639)
+- static
 
-​    · final
+- transient 也可以在Java中修饰，防止序列化。
 
-​    · transient 也可以在Java中修饰，防止序列化。
+- @Transient
 
-​    · @Transient
+```java
+// 初始化
+Wanger wanger = new Wanger();
+wanger.setName("王二");
+wanger.setAge(18);
+System.out.println(wanger);
+ 
+// 把对象写到文件中
+try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("chenmo"));){
+        oos.writeObject(wanger);
+    } catch (IOException e) {
+        e.printStackTrace();
+    }
+ 
+    // 改变 static 字段的值
+Wanger.pre ="不沉默";
+ 
+// 从文件中读出对象
+try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(new File("chenmo")));){
+    Wanger wanger1 = (Wanger) ois.readObject();
+    System.out.println(wanger1);
+} catch (IOException | ClassNotFoundException e) {
+    e.printStackTrace();
+}
+// Wanger{name=王二,age=18,pre=沉默,meizi=王三}
+// Wanger{name=王二,age=18,pre=不沉默,meizi=null}
+```
+
+另外， final关键字在序列化和反序列化时有一些微妙，详见：[java序列化与final关键字](https://zhuanlan.zhihu.com/p/48007904)
 
 # Java集合
 
@@ -857,17 +931,19 @@ public class Teacher extends Employee {
 
 （2）常见接口方法
 
-  · boolean add(E e); 在尾部追加元素    · void add(int index, E element) 
-
-   · void clear()                      · boolean contains(Object o)         
-
-   · E get(int index);获取指定下标的元素  · int indexOf(Object o)获取指定元素的下标
-
-   · boolean isEmpty() 判断是否为空     · E remove(int index / Object o) 移除          
-
-   · E set(int index, E element) 修改元素  · int size() 获得大小                
-
-   · Object[] toArray[] 转化为数组
+| 方法                           | 功能               |
+| ------------------------------ | ------------------ |
+| boolean add(E e)               | 在尾部追加元素     |
+| void add(int index, E element) |                    |
+| void clear()                   |                    |
+| boolean contains(Object o)     |                    |
+| E get(int index)               | 获取指定下标的元素 |
+| int indexOf(Object o)          | 获取指定元素的下标 |
+| boolean isEmpty()              | 判断是否为空       |
+| E remove(int index / Object o) | 移除               |
+| E set(int index, E element)    | 修改元素           |
+| int size()                     | 获得大小           |
+| Object[] toArray[]             | 转化为数组         |
 
 #### Set
 
@@ -875,11 +951,15 @@ public class Teacher extends Employee {
 
 （2）常见接口方法
 
-  · boolean add(E e)    · void clear()   · boolean contains(Object o)
-
-  · boolean isEmpty()    · boolean remove(Object o)    · int size()
-
-  · Object[] toArray()
+| 方法                       |
+| -------------------------- |
+| void clear()               |
+| boolean add(E e)           |
+| boolean contains(Object o) |
+| boolean isEmpty()          |
+| boolean remove(Object o)   |
+| int size()                 |
+| Object[] toArray()         |
 
 #### Queue
 
@@ -901,21 +981,21 @@ public class Teacher extends Employee {
 
 （2）常见接口方法
 
-  · void clear()     · boolean containsKey(Object key)   
-
-  · boolean containsValue(Object value)  · Set<Map.Entry<K,V>> entrySet()    
-
-  · boolean equals(Object o)           · Object get(Object key)
-
-  · boolean isEmpty()                · Object put(Object k, Object v) 会覆盖前面的值    
-
-  · Object remove(Object key)
-
-  · default boolean replace(Object key, Object value, Object newValue)                 
-
-  · int size()    · remove(Object key)  
-
-  · **getOrDefault(Object key, V defaultValue)**
+| 方法                                                         |
+| ------------------------------------------------------------ |
+| void clear()                                                 |
+| boolean containsKey(Object key)                              |
+| boolean containsValue(Object value)                          |
+| Set<Map.Entry<K,V>> entrySet()                               |
+| boolean equals(Object o)                                     |
+| Object get(Object key)                                       |
+| boolean isEmpty()                                            |
+| Object put(Object k, Object v) 会覆盖前面的值                |
+| Object remove(Object key)                                    |
+| default boolean replace(Object key, Object value, Object newValue) |
+| int size()                                                   |
+| remove(Object key)                                           |
+| **getOrDefault(Object key, V defaultValue)**                 |
 
   **说明：**
 
@@ -1090,11 +1170,11 @@ TreeSet<User> users = new TreeSet<User>(new MyComparator());
 
 ​    数组中存储Node<K,V>（implements Map.Entry<K,V>）。数组初始大小为16.
 
-<img src="/../assets/Java/1240-20210630144951918.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951918.png" alt="img"/>
 
 （2）JDK1.8之后，使用数组+链表+红黑树，当链表的长度大于阈值（默认8）时 ，变为红黑树
 
-<img src="/../assets/Java/1240-20210630144952126.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144952126.png" alt="img"/>
 
 #### rehash扩容机制
 
@@ -1149,7 +1229,7 @@ TreeSet<User> users = new TreeSet<User>(new MyComparator());
   3. 字符间的比较，是按照字符的字节码（ascii）来比较
   ```
 
-  -  compareTo 实现机制：对于字符串来说，字典排序规则；对于数字来说，直接按照大小排序
+  -  compareTo 实现机制：对于字符串来说，字典排序规则；对于数字字符串来说，直接按照大小排序
 
 （2）基于红黑树（自平衡的排序二叉树）实现，次序由Comparable或者Comparator决定
 
@@ -1176,7 +1256,7 @@ TreeMap<String, String> map = new TreeMap<String, String>(new Comparator<String>
 
 （2）与concurrentHashMap相比，**HashTable使用全表锁**。
 
-<img src="/../assets/Java/1240-20210630144951990.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951990.png" alt="img"/>
 
 ### ConcurrentHashMap
 
@@ -1186,13 +1266,13 @@ TreeMap<String, String> map = new TreeMap<String, String>(new Comparator<String>
 
 ​    对整个通数组进行分割分段（Segment），多线程访问容器不同段数据时，不会存在锁竞争，提高并发访问效率。
 
-<img src="/../assets/Java/1240-20210630144951949.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144951949.png" alt="img"/>
 
 （2）JDK1.8 synchronized + CAS
 
 ​    看起来是一个优化过且线程安全的HashMap。synchronized只锁定当前链表或红黑树的首节点。
 
-<img src="/../assets/Java/1240-20210630144952016.png" alt="img" style="zoom:50%;" />
+<img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/1240-20210630144952016.png" alt="img"/>
 
 ## Queue
 
@@ -1249,7 +1329,7 @@ TreeMap<String, String> map = new TreeMap<String, String>(new Comparator<String>
     return o1.getAge()-o2.getAge();//从小到大排序
    }
  }
- Arrays.sort(people,**new PersonCompartor()**);
+ Arrays.sort(people,new PersonCompartor());
  // 定制排序的⽤法
  Collections.sort(arrayList, new Comparator<Integer>() {
     @Override
