--- a/_posts/2021-06-26-fastjson汇总.md
+++ b/_posts/2021-06-26-fastjson汇总.md
@@ -5,7 +5,7 @@ tags: 架构
 
 # fastjson汇总
 
-## **fastjson简介：**
+# fastjson简介
 
 Fastjson是一个Java语言编写的高性能功能完善的JSON库。fastjson采用独创的算法，将parse的速度提升到极致，超过所有json库，包括曾经号称最快的jackson。并且还超越了google的二进制协议protocol buf。Fastjson完全支持[http://json.org](http://json.org/)的标准，也是官方网站收录的参考实现之一。支持各种JDK类型。包括基本类型、JavaBean、Collection、Map、Enum、泛型等。支持JDK 5、JDK 6、Android、阿里云手机等环境。
 
@@ -20,9 +20,7 @@ maven依赖：
 		</dependency>
 ```
 
-
-
-## 生成json字符串
+# 生成json字符串
 
 JavaBean,List<JavaBean>,List<String>,List<Map<String,Object> 生成json字符串
 
@@ -30,7 +28,7 @@ JavaBean,List<JavaBean>,List<String>,List<Map<String,Object> 生成json字符串
 String jsonStrng = JSON.toJSONString(object);
 ```
 
-##  解析json字符串为四种类型
+# 解析json字符串为四种类型
 
 1. JavaBean
 
@@ -58,13 +56,13 @@ String jsonStrng = JSON.toJSONString(object);
 
 ​      注意：此处可看出fastjson反射机制比gson更准确， id = 1001 通过fastjson反射仍是 id = 1001 , 而通过gson反射结果 为 id =1001.0
 
-## JSONObject与JSON类型的转换
+# JSONObject与JSON类型的转换
 
 ```java
 JSONObject jsonObject = JSON.parseObject(jsonString);
 ```
 
-## JSONObject中 Map, List转换
+# JSONObject中 Map, List转换
 
 1. **Map转JSONObject**
 
@@ -88,7 +86,29 @@ JSONObject jsonObject = JSON.parseObject(jsonString);
 
 # fastjson解析null值处理 null的属性不显示
 
-​	这个主要是一些插件可以显示null，格式化好看一点，参考[这里](https://blog.csdn.net/u012448083/article/details/75026310)
+参考[fastjson解析null值处理 null的属性不显示](https://blog.csdn.net/u012448083/article/details/75026310)
+
+> 语法：
+>
+> JSONObject.toJSONString(Object object, SerializerFeature... features)
+
+> 可以用参数
+>
+>   QuoteFieldNames———-输出key时是否使用双引号,默认为true
+>
+>   WriteMapNullValue——–是否输出值为null的字段,默认为false
+>
+>   WriteNullNumberAsZero—-数值字段如果为null,输出为0,而非null
+>
+>   WriteNullListAsEmpty—–List字段如果为null,输出为[],而非null
+>
+>   WriteNullStringAsEmpty—字符类型字段如果为null,输出为”“,而非null
+>
+>   WriteNullBooleanAsFalse–Boolean字段如果为null,输出为false,而非null
+
+```java
+String str = JSONObject.toJSONString(jsonMap,SerializerFeature.WriteMapNullValue);
+```
 
 # 总结
 
