--- a/_posts/2020-10-28-Java常见问题汇总.md
+++ b/_posts/2020-10-28-Java常见问题汇总.md
@@ -1,21 +1,17 @@
 ---
-title: Java基础+集合+多线程+JVM（三）
+title: Java场景问题汇总
 tags: Java
 ---
 
 *由简书搬迁而来[**原文链接**](https://www.jianshu.com/p/0818149b58f5)*
 
 > 目录  
-> 1 Java基础  
-> 2 Java集合  
-> 3 Java多线程  
-> 4 JVM  
-> **5 常见问题汇总**  
->
+> **常见问题汇总**  
+> 
 > 参考资料  
 > ·《Java编程思想》  
 > ·《Java Web 技术内幕》  
-> ·《Java 并发编程实战》  
+>·《Java 并发编程实战》  
 
 # 常见问题汇总
 
@@ -94,9 +90,9 @@ tags: Java
 
 File f=new File("C:/ResourceJar.jar!/resource/res.txt");
 
-当然不可能，因为".../ResourceJar.jar!/resource/...."并不是文件资源定位符的格式 (jar中资源有其专门的URL形式：
+当然不可能，因为".../ResourceJar.jar!resource/...."并不是文件资源定位符的格式 (jar中资源有其专门的URL形式：
 
-**jar:<url>!/{entry}**)。所以，如果jar包中的类源代码用File f=new File(相对路径);的形式，是不可能定位到文件资源的。这也是为什么源代码1打包成jar文件后，调用jar包时会报出FileNotFoundException的症结所在了。
+**jar:<url>!/{entry}**)。所以，如果jar包中的类源代码用File f=new File(相对路径);的形式，是不可能定位到文件资源的。这也是为什么源代码打包成jar文件后，调用jar包时会报出FileNotFoundException的症结所在了。
 
 **(3)** 我们不能用常规操作文件的方法来读取ResourceJar.jar中的资源文件res.txt，**但可以通过Class类的getResourceAsStream()方法来获取** ，这种方法是如何读取jar中的资源文件的，这一点对于我们来说是透明的。我们将Resource.java改写成：
 
@@ -124,11 +120,11 @@ File f=new File("C:/ResourceJar.jar!/resource/res.txt");
 
 （2）这样的问题是因为，jar包中的**META-INF**文件夹下的**MANIFEST.MF**文件缺少定义jar接口类。**说白了就是没有指定class类**。这里说明一下MANIFEST.MF就是一个清单文件，
 
-　　　 通俗点将就相当于WINDOWS中ini配置文件。用来配置程序的一些信息。
+通俗点将就相当于WINDOWS中ini配置文件。用来配置程序的一些信息。
 
 （3）解决这个问题的方法就是要在**MANIFEST.MF**文件中添加一个入口类。
 
-　　　　即需要一个Main-Class定义行。更详细的MANIFEST.MF文件定义说明，请参考官方MANIFEST.MF文件定义手册。
+即需要一个Main-Class定义行。更详细的MANIFEST.MF文件定义说明，请参考官方MANIFEST.MF文件定义手册。
 
 详见：[java运行jar命令提示没有主清单属性 - shaomine - 博客园](https://www.cnblogs.com/shaosks/p/9984350.html)
 
@@ -154,25 +150,7 @@ File f=new File("C:/ResourceJar.jar!/resource/res.txt");
 
 详见：[Java 中初始化 List 集合的 6 种方式! - 知乎](https://zhuanlan.zhihu.com/p/51742171)
 
-## fastjson解析null值处理 null的属性不显示
-
-  JSONObject.toJSONString(Object object, SerializerFeature... features)
-
-  QuoteFieldNames———-输出key时是否使用双引号,默认为true
-
-  WriteMapNullValue——–是否输出值为null的字段,默认为false
-
-  WriteNullNumberAsZero—-数值字段如果为null,输出为0,而非null
-
-  WriteNullListAsEmpty—–List字段如果为null,输出为[],而非null
-
-  WriteNullStringAsEmpty—字符类型字段如果为null,输出为”“,而非null
-
-  WriteNullBooleanAsFalse–Boolean字段如果为null,输出为false,而非null
-
-String str =**JSONObject**.toJSONString(jsonMap,SerializerFeature.WriteMapNullValue);
-
-详见：[fastjson解析null值处理 null的属性不显示_阳光的专栏-CSDN博客](https://blog.csdn.net/u012448083/article/details/75026310)
+https://blog.csdn.net/u012448083/article/details/75026310)
 
 ## 遍历Map集合
 
@@ -187,9 +165,3 @@ System.out.println("key= "+ key + " and value= " + map.get(key));
 }
 
 详见：[遍历Map - 知乎](https://zhuanlan.zhihu.com/p/76642935)
-
-## String字符串与常量池
-
-[Java提高篇之常量池_#include-CSDN博客](https://blog.csdn.net/vegetable_bird_001/article/details/51278339)
-
-[JAVA常量池，一篇文章就足够入门了。（含图解）_人在江湖-CSDN博客](
